--- a/UnserTeam.html
+++ b/UnserTeam.html
@@ -48,12 +48,12 @@
 <center><table align="center">
 	<tr>
 		<th width="200" align="center"></th>
-		<th width="200" align="center"><h1>Gesch&aumlftsf&uumlhrung</h1></th>
+		<th width="200" align="center"><h1 align="center">Gesch&aumlftsf&uumlhrung</h1></th>
 		<th width="200" align="center"></th>
 	</tr>
 	<tr>
 		<td width="200" align="center"></td>
-		<td width="200" align="center"><figure><img src="images/Tritscher_Nicolas.jpg" width="200" height="300"/></figure></td>
+		<td width="200" align="center"><figure><img src="images/Tritscher_Nicolas.jpg" width="200" height="300" align="center"/></figure></td>
 		<td width="200" align="center"></td>
 	</tr>
 	<tr>
