--- a/UnserTeam.html
+++ b/UnserTeam.html
@@ -60,7 +60,7 @@
 		<td width="200" align="center"></td>
 		<td width="200" align="center"><div class="container">
 			<div class="interior">
-			<a class="btn" href="#open-modal1">mehr...</a></br>
+			<a align="center" class="btn" href="#open-modal1">mehr...</a></br>
 			</div></div><div id="open-modal1" class="modal-window">
 			<div>
 			<a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
