--- a/UnserTeam.html
+++ b/UnserTeam.html
@@ -53,7 +53,7 @@
 	</tr>
 	<tr>
 		<td width="200" align="center"></td>
-		<td width="200" align="center"><figure><img align="center" src="images/Tritscher_Nicolas.jpg" width="200" height="300"/></figure></td>
+		<td style="text-align:center" width="200"><figure><img src="images/Tritscher_Nicolas.jpg" width="200" height="300"/></figure></td>
 		<td width="200" align="center"></td>
 	</tr>
 	<tr>
