--- a/UnserTeam.html
+++ b/UnserTeam.html
@@ -71,17 +71,17 @@
 	</tr></table>
 <table><tr>
 		<th width="200" align="center"></th>
-		<th width="200" align="center"><h1>Office</h1></th>
+		<th width="200" align="center"><h1 align="center">Office</h1></th>
 		<th width="200" align="center"></th>
 	</tr>
 	<tr>
 		<td width="200" align="center"></td>
-		<td width="200" align="center"><figure><img src="images/Hollinger_Marius.jpg" width="200" height="300"/></figure></td>
+		<td style="text-align:center" width="200" align="center"><figure><img src="images/Hollinger_Marius.jpg" width="200" height="300"/></figure></td>
 		<td width="200" align="center"></td>
 	</tr>
 	<tr>
 		<td width="200" align="center"></td>
-		<td width="200" align="center"><div class="container">
+		<td width="200" align="center"><div align="center" class="container">
 			<div class="interior">
 			<a class="btn" href="#open-modal2">mehr...</a></br>
 			</div></div><div id="open-modal2" class="modal-window">
@@ -94,16 +94,16 @@
 	</tr></table>
 <table><tr>
 		<th width="200" align="center"></th>
-		<th width="200" align="center"><h1>Verkauf</h1></th>
+		<th width="200" align="center"><h1 align="center">Verkauf</h1></th>
 		<th width="200" align="center"></th>
 	</tr>
 	<tr>
-		<td width="200" align="center"><figure><img src="images/Stocklassa_Nina.jpg" width="200" height="300"/></figure></td>
-		<td width="200" align="center"><figure><img src="images/Pilz_Claudia.jpg" width="200" height="300"/></figure></td>
-		<td width="200" align="center"><figure><img src="images/Julia.jpg" width="200" height="300"/></figure></td>
+		<td style="text-align:center" width="200" align="center"><figure><img src="images/Stocklassa_Nina.jpg" width="200" height="300"/></figure></td>
+		<td style="text-align:center" width="200" align="center"><figure><img src="images/Pilz_Claudia.jpg" width="200" height="300"/></figure></td>
+		<td style="text-align:center" width="200" align="center"><figure><img src="images/Julia.jpg" width="200" height="300"/></figure></td>
 	</tr>
 	<tr>
-		<td width="200" align="center"><div class="container">
+		<td width="200" align="center"><div align="center" class="container">
 			<div class="interior">
 			<a class="btn" href="#open-modal3">mehr...</a></br>
 			</div></div><div id="open-modal3" class="modal-window">
@@ -112,7 +112,7 @@
 			<h1>Stocklassa Nina</h1>
 			<div>Abteilungsleitung Verkauf</br>
 			</div></div></div></td>
-		<td width="200" align="center"><div class="container">
+		<td width="200" align="center"><div align="center" class="container">
 			<div class="interior">
 			<a class="btn" href="#open-modal4">mehr...</a></br>
 			</div></div><div id="open-modal4" class="modal-window">
@@ -121,7 +121,7 @@
 			<h1>Pilz Claudia</h1>
 			<div>Verkauf</br>
 			</div></div></div></td>
-		<td width="200" align="center"><div class="container">
+		<td width="200" align="center"><div align="center" class="container">
 			<div class="interior">
 			<a class="btn" href="#open-modal5">mehr...</a></br>
 			</div></div><div id="open-modal5" class="modal-window">
@@ -135,15 +135,15 @@
 
 <table><tr>
 		<th width="200" align="center"></th>
-		<th width="200" align="center"><h1>Einkauf</h1></br></th>
+		<th width="200" align="center"><h1 align="center">Einkauf</h1></br></th>
 		<th width="200" align="center"></th>
 	</tr></table>
 <table><tr>
-		<td width="200" align="center"><figure><img src="images/Mathias.jpeg" width="200" height="300"/></figure></td>
-		<td width="200" align="center"><figure><img src="images/Nikolic_Nina.jpg" width="200" height="300"/></figure></td>
+		<td style="text-align:center" width="200" align="center"><figure><img src="images/Mathias.jpeg" width="200" height="300"/></figure></td>
+		<td style="text-align:center" width="200" align="center"><figure><img src="images/Nikolic_Nina.jpg" width="200" height="300"/></figure></td>
 	</tr>
 	<tr>
-		<td width="200" align="center"><div class="container">
+		<td width="200" align="center"><div align="center" class="container">
 			<div class="interior">
 			<a class="btn" href="#open-modal6">mehr...</a></br>
 			</div></div><div id="open-modal6" class="modal-window">
@@ -152,7 +152,7 @@
 			<h1>Mayerhofer Mathias</h1>
 			<div>Abteilungsleitung Einkauf</br>
 			</div></div></div></td>
-		<td width="200" align="center"><div class="container">
+		<td width="200" align="center"><div align="center" class="container">
 			<div class="interior">
 			<a class="btn" href="#open-modal7">mehr...</a></br>
 			</div></div><div id="open-modal7" class="modal-window">
@@ -165,15 +165,15 @@
 	
 	<table><tr>
 		<th width="200" align="center"></th>
-		<th width="200" align="center"><h1>IT und Marketing</h1></th>
+		<th width="200" align="center"><h1 align="center">IT und Marketing</h1></th>
 		<th width="200" align="center"></th>
 	</tr></table>
 	<table><tr>
-		<td width="200" align="center"><figure><img src="images/Kanzler_Tamara.jpg" width="200" height="300"/></figure></td>
-		<td width="200" align="center"><figure><img src="images/Lettner_Paul.jpg" width="200" height="300"/></figure></td>
+		<td style="text-align:center" width="200" align="center"><figure><img src="images/Kanzler_Tamara.jpg" width="200" height="300"/></figure></td>
+		<td style="text-align:center" width="200" align="center"><figure><img src="images/Lettner_Paul.jpg" width="200" height="300"/></figure></td>
 	</tr>
 	<tr>
-		<td width="200" align="center"><div class="container">
+		<td width="200" align="center"><div align="center" class="container">
 			<div class="interior">
 			<a class="btn" href="#open-modal6">mehr...</a></br>
 			</div></div><div id="open-modal6" class="modal-window">
@@ -182,7 +182,7 @@
 			<h1>Kanzler Tamara</h1>
 			<div>Abteilungsleitung IT und Marketing</br>
 			</div></div></div></td>
-		<td width="200" align="center"><div class="container">
+		<td width="200" align="center"><div align="center" class="container">
 			<div class="interior">
 			<a class="btn" href="#open-modal7">mehr...</a></br>
 			</div></div><div id="open-modal7" class="modal-window">
@@ -195,17 +195,17 @@
 	
 	<table><tr>
 		<th width="200" align="center"></th>
-		<th width="200" align="center"><h1>Personal</h1></th>
+		<th width="200" align="center"><h1 align="center">Personal</h1></th>
 		<th width="200" align="center"></th>
 	</tr>
 	<tr>
 		<td width="200" align="center"></td>
-		<td width="200" align="center"><figure><img src="images/Laketic_Tamara.jpg" width="200" height="300"/></figure></td>
+		<td style="text-align:center" width="200" align="center"><figure><img src="images/Laketic_Tamara.jpg" width="200" height="300"/></figure></td>
 		<td width="200" align="center"></td>
 	</tr>
 	<tr>
 		<td width="200" align="center"></td>
-		<td width="200" align="center"><div class="container">
+		<td width="200" align="center"><div align="center" class="container">
 			<div class="interior">
 			<a class="btn" href="#open-modal1">mehr...</a></br>
 			</div></div><div id="open-modal1" class="modal-window">
@@ -219,15 +219,15 @@
 	
 <table><tr>
 		<th width="200" align="center"></th>
-		<th width="200" align="center"><h1>Buchhaltung</h1></th>
+		<th width="200" align="center"><h1 align="center">Buchhaltung</h1></th>
 		<th width="200" align="center"></th>
 	</tr></table>
 	<table><tr>
-		<td width="200" align="center"><figure><img src="images/Kanzler_Tamara.jpg" width="200" height="300"/></figure></td>
-		<td width="200" align="center"><figure><img src="images/Lettner_Paul.jpg" width="200" height="300"/></figure></td>
+		<td style="text-align:center" width="200" align="center"><figure><img src="images/Hechl_Coleen.jpg" width="200" height="300"/></figure></td>
+		<td style="text-align:center" width="200" align="center"><figure><img src="images/Turk_Martina.jpg" width="200" height="300"/></figure></td>
 	</tr>
 	<tr>
-		<td width="200" align="center"><div class="container">
+		<td width="200" align="center"><div align="center" class="container">
 			<div class="interior">
 			<a class="btn" href="#open-modal6">mehr...</a></br>
 			</div></div><div id="open-modal6" class="modal-window">
@@ -236,7 +236,7 @@
 			<h1>Turk Martina</h1>
 			<div>Abteilungsleitung Buchhaltung</br>
 			</div></div></div></td>
-		<td width="200" align="center"><div class="container">
+		<td width="200" align="center"><div align="center" class="container">
 			<div class="interior">
 			<a class="btn" href="#open-modal7">mehr...</a></br>
 			</div></div><div id="open-modal7" class="modal-window">
