--- a/UnserTeam.html
+++ b/UnserTeam.html
@@ -135,10 +135,10 @@
 
 <table><tr>
 		<th width="200" align="center"></th>
-		<th width="200" align="center"><h1 align="center">Einkauf</h1></br></th>
+		<th width="200" align="center"><h1 align="center">Einkauf</h1></th>
 		<th width="200" align="center"></th>
 	</tr></table>
-<table><tr>
+	<table><tr>
 		<td style="text-align:center" width="200" align="center"><figure><img src="images/Mathias.jpeg" width="200" height="300"/></figure></td>
 		<td style="text-align:center" width="200" align="center"><figure><img src="images/Nikolic_Nina.jpg" width="200" height="300"/></figure></td>
 	</tr>
@@ -158,7 +158,7 @@
 			</div></div><div id="open-modal7" class="modal-window">
 			<div>
 			<a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
-			<h1>Nikolic Nina</h1>
+			<h1>Nikoloic Nina</h1>
 			<div>Einkauf</br>
 			</div></div></div></td>
 	</tr></table>
@@ -175,8 +175,8 @@
 	<tr>
 		<td width="200" align="center"><div align="center" class="container">
 			<div class="interior">
-			<a class="btn" href="#open-modal6">mehr...</a></br>
-			</div></div><div id="open-modal6" class="modal-window">
+			<a class="btn" href="#open-modal8">mehr...</a></br>
+			</div></div><div id="open-modal8" class="modal-window">
 			<div>
 			<a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
 			<h1>Kanzler Tamara</h1>
@@ -184,8 +184,8 @@
 			</div></div></div></td>
 		<td width="200" align="center"><div align="center" class="container">
 			<div class="interior">
-			<a class="btn" href="#open-modal7">mehr...</a></br>
-			</div></div><div id="open-modal7" class="modal-window">
+			<a class="btn" href="#open-modal9">mehr...</a></br>
+			</div></div><div id="open-modal9" class="modal-window">
 			<div>
 			<a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
 			<h1>Lettner Paul</h1>
@@ -207,8 +207,8 @@
 		<td width="200" align="center"></td>
 		<td width="200" align="center"><div align="center" class="container">
 			<div class="interior">
-			<a class="btn" href="#open-modal1">mehr...</a></br>
-			</div></div><div id="open-modal1" class="modal-window">
+			<a class="btn" href="#open-modal10">mehr...</a></br>
+			</div></div><div id="open-modal10" class="modal-window">
 			<div>
 			<a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
 			<h1>Laketic Tamara</h1>
@@ -229,8 +229,8 @@
 	<tr>
 		<td width="200" align="center"><div align="center" class="container">
 			<div class="interior">
-			<a class="btn" href="#open-modal6">mehr...</a></br>
-			</div></div><div id="open-modal6" class="modal-window">
+			<a class="btn" href="#open-modal11">mehr...</a></br>
+			</div></div><div id="open-modal11" class="modal-window">
 			<div>
 			<a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
 			<h1>Turk Martina</h1>
@@ -238,8 +238,8 @@
 			</div></div></div></td>
 		<td width="200" align="center"><div align="center" class="container">
 			<div class="interior">
-			<a class="btn" href="#open-modal7">mehr...</a></br>
-			</div></div><div id="open-modal7" class="modal-window">
+			<a class="btn" href="#open-modal12">mehr...</a></br>
+			</div></div><div id="open-modal12" class="modal-window">
 			<div>
 			<a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
 			<h1>Hechl Coleen</h1>
