--- a/Produktkatalog.html
+++ b/Produktkatalog.html
@@ -34,6 +34,7 @@
           <li><a href="Sotickenwir.html">So ticken wir</a></li>
           <li><a href="Produktkatalog.html">Produktkatalog</a></li>
 		  <li><a href="UnserTeam.html">Unser Team</a></li>
+		  <li><a href="https://shops.act.at/10001561/desktop/de/shop/innovationen/">Online Shop</a></li>
          </ul>
       </div>
     </div>
@@ -179,7 +180,7 @@
   <div>
     <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
     <h1>Rostschreck</h1>
-    <div>Die Anwendung von Rostschreck ist sehr simpel. Sie legen ihn einfach in Ihre Sp&uumllmaschiene und er h&aumlllt diese f&uumlr ca. 60 Sp&uumlldurchg&aumlnge, ganz ohne Chemie, frei von Flugrost.
+    <div>Die Anwendung von Rostschreck ist sehr simpel. Sie legen ihn einfach in Ihre Sp&uumllmaschiene und er h&aumlllt diese f&uumlr ca. 600 Sp&uumlldurchg&aumlnge, ganz ohne Chemie, frei von Flugrost.
 	</br></br>
 	<strong>Eigenschaften</strong></br></br>
 <ul><li><strong>Farben: </strong>silber</li>
@@ -291,7 +292,7 @@
   <div>
     <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
     <h1>Smart-Fahrradhelm inkl. Ersch&uumltterungssensor</h1>
-    <div> Durch die 15 LDS auf dem Helm, sind Sie im Dunklen seht gut sichtbar und die 0,5 Watt Kopfh&oumlrer &uumlber die Sie Musik h&oumlren oder Navigationsanweisungen folgen k&oumlnnen, beeintr&aumlchtigen Sie nicht in der Wahrnehmung Ihrer Umgebungsger&aumlusche. Der Ersch&uumltterungssensor schaltet im Falle eines Sturzes die LED's auf rot und kontaktiert nach 90 Sekunden die, von Ihnen angegebene, Notrufnummer.
+    <div> Durch die 15 LED's auf dem Helm, sind Sie im Dunklen seht gut sichtbar und die 0,5 Watt Kopfh&oumlrer &uumlber die Sie Musik h&oumlren oder Navigationsanweisungen folgen k&oumlnnen, beeintr&aumlchtigen Sie nicht in der Wahrnehmung Ihrer Umgebungsger&aumlusche. Der Ersch&uumltterungssensor schaltet im Falle eines Sturzes die LED's auf rot und kontaktiert nach 90 Sekunden die, von Ihnen angegebene, Notrufnummer.
 	</br></br>
 	<strong>Eigenschaften</strong></br></br>
 <ul><li><strong>Farben: </strong>schwarz</li>
@@ -313,7 +314,7 @@
   <div>
     <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
     <h1>Kugelschreiber</h1>
-    <div>Der Kugelschreiber aus Metall besitzt einen Silikongriffpart und eine Gro&szligraummine.</br></br>
+    <div>61</br></br>
 	<strong>Eigenschaften</strong></br></br>
 <ul><li><strong>Material: </strong>Metall</li>
 	<li><strong>Farben: </strong>schwarz, silber</li>
@@ -353,7 +354,7 @@
   <div>
     <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
     <h2>LED Taschenlampe Starlight LED</h2>
-    <div>Metall-Schl&uumlsselanh&aumlnger mit blauer LED und Schl&uumlsselring in einer schicken Design-Box.
+    <div>Metall-Schl&uumlsselanh&aumlnger mit blauer LED Taschenlampe und Schl&uumlsselring in einer schicken Design-Box.
 </br></br>
 	<strong>Eigenschaften</strong></br></br>
 <ul><li><strong>Farbe: </strong>silber</li>
@@ -476,7 +477,7 @@
     </div>
     <div id="content_footer"></div>
     <div id="footer">
-    <p><a href="index.html">Home</a> | <a href="Ueberuns.html">&Uumlber uns</a> | <a href="Sotickenwir.html">So ticken wir</a> | <a href="Produktkatalog.html">Produktkatalog</a> | <a href="UnserTeam.html">Unser Team</a> | <a href="impressum.html">Impressum</a>  |  <a href="AGB's.html">AGB's</a></p>
+    <p><a href="index.html">Home</a> | <a href="Ueberuns.html">&Uumlber uns</a> | <a href="Sotickenwir.html">So ticken wir</a> | <a href="Produktkatalog.html">Produktkatalog</a> | <a href="UnserTeam.html">Unser Team</a> | <a href="https://shops.act.at/10001561/desktop/de/shop/innovationen/">Online Shop</a> | <a href="impressum.html">Impressum</a>  |  <a href="AGB's.html">AGB's</a></p>
 	</div>
   </div>
 </body>
