--- a/UnserTeam.html
+++ b/UnserTeam.html
@@ -69,7 +69,7 @@
 			<div>Gesch&aumlftsf&uumlhrung</br>
 			</div></div></div></td>
 		<td width="200" align="center"></td>
-	</tr></table>
+	</tr></table></br></br>
 <table><tr>
 		<th width="200" align="center"></th>
 		<th width="200" align="center"><h1 align="center">Office</h1></th>
@@ -92,7 +92,7 @@
 			<div>Abteilungsleitung Office</br>
 			</div></div></div></td>
 		<td width="200" align="center"></td>
-	</tr></table>
+	</tr></table></br></br>
 <table><tr>
 		<th width="200" align="center"></th>
 		<th width="200" align="center"><h1 align="center">Verkauf</h1></th>
@@ -132,7 +132,7 @@
 			<div>Verkauf</br>
 			</div></div></div></td>
 	</tr>
-</table></center>
+</table></center></br></br>
 
 <table><tr>
 		<th width="200" align="center"></th>
@@ -162,7 +162,7 @@
 			<h1>Nikoloic Nina</h1>
 			<div>Einkauf</br>
 			</div></div></div></td>
-	</tr></table>
+	</tr></table></br></br>
 	
 	<table><tr>
 		<th width="200" align="center"></th>
@@ -192,7 +192,7 @@
 			<h1>Lettner Paul</h1>
 			<div>IT und Marketing</br>
 			</div></div></div></td>
-	</tr></table>
+	</tr></table></br></br>
 	
 	<table><tr>
 		<th width="200" align="center"></th>
@@ -216,7 +216,7 @@
 			<div>Abteilungsleitung Personal</br>
 			</div></div></div></td>
 		<td width="200" align="center"></td>
-	</tr></table>
+	</tr></table></br></br>
 	
 <table><tr>
 		<th width="200" align="center"></th>
