--- a/UnserTeam.html
+++ b/UnserTeam.html
@@ -162,7 +162,7 @@
 			<h1>Nikoloic Nina</h1>
 			<div>Einkauf</br>
 			</div></div></div></td>
-	</tr></table></br></br>
+	</tr></table></br></br></br></br>
 	
 	<table><tr>
 		<th width="200" align="center"></th>
