--- a/UnserTeam.html
+++ b/UnserTeam.html
@@ -246,7 +246,7 @@
 			<h1>Hechl Coleen</h1>
 			<div>Buchhaltung</br>
 			</div></div></div></td>
-	</tr></table></br></br></br></br>
+	</tr></table></br></br></br></br></br></br></br></br>
 
 
 
