--- a/Impressum.html
+++ b/Impressum.html
@@ -112,7 +112,7 @@
 		<li>Recht auf L&oumlschung (&bdquo;Recht auf Vergessenwerden&ldquo;) (Artikel 17 DSGVO)</li>
 		<li>Recht auf Einschr&aumlnkung der Verarbeitung (Artikel 18 DSGVO)</li>
 		<li>Recht auf Benachrichtigung &mdash Mitteilungspflicht im Zusammenhang mit der Berichtigung oder L&oumlschung personenbezogener Daten oder der Einschr&aumlnkung der Verarbeitung (Artikel 19 DSGVO)</li>
-		<li>Recht auf DatenUumlbertragbarkeit (Artikel 20 DSGVO)</li>
+		<li>Recht auf Daten&uumlbertragbarkeit (Artikel 20 DSGVO)</li>
 		<li>Widerspruchsrecht (Artikel 21 DSGVO)</li>
 		<li>Recht, nicht einer ausschlie&szliglich auf einer automatisierten Verarbeitung &mdash einschlie&szliglich Profiling &mdash beruhenden Entscheidung unterworfen zu werden (Artikel 22 DSGVO)</li></ol></br>
 		Wenn Sie glauben, dass die Verarbeitung Ihrer Daten gegen das Datenschutzrecht verst&ouml&szligt oder Ihre datenschutzrechtlichen Anspr&uumlche sonst in einer Weise verletzt worden sind, k&oumlnnen Sie sich bei der Aufsichtsbeh&oumlrde beschweren, welche in &Oumlsterreich die Datenschutzbeh&oumlrde ist, deren Webseite Sie unter <a href="https://www.dsb.gv.at/">https://www.dsb.gv.at/</a> finden.</p></br></br>
@@ -128,8 +128,8 @@
 		<li>Facebook-Datenrichtline: <a href="https://www.facebook.com/about/privacy"> https://www.facebook.com/about/privacy</a></li>
 		<li>Twitter Datenschutzrichtlinie: <a href="https://twitter.com/de/privacy"> https://twitter.com/de/privacy</a></li>
 		<li>Facebook Datenschutzerkl&aumlrung: <a href="https://www.facebook.com/policy.php"> https://www.facebook.com/policy.php</a></li></ol>
-		Wir verwenden auf dieser Webseite Funktionen von Facebook, einem Social Media Network der FIrma Facebook Ireland Ltd., 4 Grand Canal Square, Grand Canal Harbour, Dublin 2 Ireland.</br>
-		Welche Funktionen (Soziale Plug-ins) Facebook bereitstellt, k&oumlnnen Sie auf <a href="https://developers.facebook.com/docs/plugins/"> https://developers.facebook.com/docs/plugins/ </a> nachlesen.</br>
+		Wir verwenden auf dieser Webseite Funktionen von Facebook, einem Social Media Network der Firma Facebook Ireland Ltd., 4 Grand Canal Square, Grand Canal Harbour, Dublin 2 Ireland.</br>
+		Welche Funktionen (Soziale Plug-Ins) Facebook bereitstellt, k&oumlnnen Sie auf <a href="https://developers.facebook.com/docs/plugins/"> https://developers.facebook.com/docs/plugins/ </a> nachlesen.</br>
 		Durch den Besuch unserer Webseite k&oumlnnen Informationen an Facebook &uumlbermittelt werden. Wenn Sie &uumlber ein Facebook-Konto verf&uumlgen, kann Facebook diese Daten Ihrem pers&oumlnlichen Konto zuordnen. Sollten Sie das nicht w&uumlnschen, melden Sie sich bitte von Facebook ab.</br>
 		Die Datenschutzrichtlinien, welche Informationen Facebook sammelt und wie sie diese verwenden finden Sie auf <a href="https://www.facebook.com/policy.php."> https://www.facebook.com/policy.php. </a></p></br></br>
 
