--- a/Produktkatalog.html
+++ b/Produktkatalog.html
@@ -91,7 +91,7 @@
   <div>
     <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
     <h1>holzkitz - Wildspitze</h1>
-    <div>Diese Holzsonnenbrillen sind ein handgefertigtes Unikat mit individueller Farbnuance und einzigartiger Holzstruktur. Die Sonnenbrillen bestechen durch ihren zeitlosen Stil und gl&aumlnzten durch &Aumlsthetik, Tragekomfort und Langlebigkeit. Unsere Sonnenbrillen aus Holz werden mit einem Natur-Schutzlack &uumlberzogen und sind vor Schwei&szlig und Wasser gesch&uumltzt. Ein inno-vatives Federscharnier aus rostfreiem Edelstahl sorgt f&uumlr den perfekten Sitz Ihrer Holzbrille.
+    <div>Diese Holzsonnenbrillen sind ein handgefertigtes Unikat mit individueller Farbnuance und einzigartiger Holzstruktur. Die Sonnenbrillen bestechen durch ihren zeitlosen Stil und gl&aumlnzten durch &Aumlsthetik, Tragekomfort und Langlebigkeit. Unsere Sonnenbrillen aus Holz werden mit einem Natur-Schutzlack &uumlberzogen und sind vor Schwei&szlig und Wasser gesch&uumltzt. Ein innovatives Federscharnier aus rostfreiem Edelstahl sorgt f&uumlr den perfekten Sitz Ihrer Holzbrille.
 	</br></br>
 	<strong>Eigenschaften</strong></br></br>
 <ul><li><strong>Preis: </strong>79,00 €/St&uumlck</li></ul>
@@ -108,7 +108,7 @@
   <div>
     <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
     <h1>holzkitz - Gro&szligglockner</h1>
-    <div>Diese Holzsonnenbrillen sind ein handgefertigtes Unikat mit individueller Farbnuance und einzigartiger Holzstruktur. Die Sonnenbrillen bestechen durch ihren zeitlosen Stil und gl&aumlnzten durch &Aumlsthetik, Tragekomfort und Langlebigkeit. Unsere Sonnenbrillen aus Holz werden mit einem Natur-Schutzlack &uumlberzogen und sind vor Schwei&szlig und Wasser gesch&uumltzt. Ein inno-vatives Federscharnier aus rostfreiem Edelstahl sorgt f&uumlr den perfekten Sitz Ihrer Holzbrille.
+    <div>Diese Holzsonnenbrillen sind ein handgefertigtes Unikat mit individueller Farbnuance und einzigartiger Holzstruktur. Die Sonnenbrillen bestechen durch ihren zeitlosen Stil und gl&aumlnzten durch &Aumlsthetik, Tragekomfort und Langlebigkeit. Unsere Sonnenbrillen aus Holz werden mit einem Natur-Schutzlack &uumlberzogen und sind vor Schwei&szlig und Wasser gesch&uumltzt. Ein innovatives Federscharnier aus rostfreiem Edelstahl sorgt f&uumlr den perfekten Sitz Ihrer Holzbrille.
 	</br></br>
 	<strong>Eigenschaften</strong></br></br>
 <ul><li><strong>Preis: </strong>84,00 €/St&uumlck</li></ul>
@@ -125,7 +125,7 @@
   <div>
     <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
     <h1>pluvis® Kids</h1>
-    <div>Mit dem Regenschirm von pluvis® sind Sie nicht nur modisch, sondern auch si-cher unterwegs. Unsere innovativen, beleuchtbaren Regenschirme sind der ideale Begleiter an verregneten Abenden. W&aumlhrend ein LED-Licht an der Schirmspitze (pluvis® toplight) f&uumlr Aufmerksamkeit sorgt, ist im Schirmstock eine LED-Taschenlampe integriert (pluvis® flash-light) und leuchtet gleichzeitig den Fu&szligweg aus. Dies schafft f&uumlr Fu&szligg&aumlnger jeder Altersklasse enorme Sicherheit bei Dun-kelheit bzw. Regen und warnt heranna-hende Autofahrer aus allen Richtungen.
+    <div>Mit dem Regenschirm von pluvis® sind Sie nicht nur modisch, sondern auch sicher unterwegs. Unsere innovativen, beleuchtbaren Regenschirme sind der ideale Begleiter an verregneten Abenden. W&aumlhrend ein LED-Licht an der Schirmspitze (pluvis® toplight) f&uumlr Aufmerksamkeit sorgt, ist im Schirmstock eine LED-Taschenlampe integriert (pluvis® flash-light) und leuchtet gleichzeitig den Fu&szligweg aus. Dies schafft f&uumlr Fu&szligg&aumlnger jeder Altersklasse enorme Sicherheit bei Dunkelheit bzw. Regen und warnt herannahende Autofahrer aus allen Richtungen.
 	</br></br>
 	<strong>Eigenschaften</strong></br></br>
 <ul><li><strong>Farben: </strong>schwarz, braun, weinrot, grau, dunkelgr&uumln, gelb, orange, rot, hellgr&uumln, blau</li>
@@ -144,7 +144,7 @@
   <div>
     <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
     <h1>pluvis® Adult</h1>
-    <div>Mit dem Regenschirm von pluvis® sind Sie nicht nur modisch, sondern auch si-cher unterwegs. Unsere innovativen, beleuchtbaren Regenschirme sind der ideale Begleiter an verregneten Abenden. W&aumlhrend ein LED-Licht an der Schirmspit-ze (pluvis® toplight) f&uumlr Aufmerksamkeit sorgt, ist im Schirmstock eine LED-Taschenlampe integriert (pluvis® flash-light) und leuchtet gleichzeitig den Fu&szligweg aus. Dies schafft f&uumlr Fu&szligg&aumlnger jeder Altersklasse enorme Sicherheit bei Dun-kelheit bzw. Regen und warnt heranna-hende Autofahrer aus allen Richtungen.
+    <div>Mit dem Regenschirm von pluvis® sind Sie nicht nur modisch, sondern auch sicher unterwegs. Unsere innovativen, beleuchtbaren Regenschirme sind der ideale Begleiter an verregneten Abenden. W&aumlhrend ein LED-Licht an der Schirmspitze (pluvis® toplight) f&uumlr Aufmerksamkeit sorgt, ist im Schirmstock eine LED-Taschenlampe integriert (pluvis® flash-light) und leuchtet gleichzeitig den Fu&szligweg aus. Dies schafft f&uumlr Fu&szligg&aumlnger jeder Altersklasse enorme Sicherheit bei Dunkelheit bzw. Regen und warnt herannahende Autofahrer aus allen Richtungen.
 	</br></br>
 	<strong>Eigenschaften</strong></br></br>
 <ul><li><strong>Farben: </strong>schwarz, braun, weinrot, grau, dunkelgr&uumln, gelb, orange, rot, hellgr&uumln, blau</li>
@@ -180,7 +180,7 @@
   <div>
     <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
     <h1>Rostschreck</h1>
-    <div>Die Anwendung von Rostschreck ist sehr simpel. Sie legen ihn einfach in Ihre Sp&uumllmaschiene und er h&aumlllt diese f&uumlr ca. 600 Sp&uumlldurchg&aumlnge, ganz ohne Chemie, frei von Flugrost.
+    <div>Die Anwendung von Rostschreck ist sehr simpel. Sie legen ihn einfach in Ihre Sp&uumllmaschiene und er h&aumlllt diese f&uumlr ca. 600 Sp&uumlldurchg&aumlnge, ganz ohne Chemie, frei von Flug Rost.
 	</br></br>
 	<strong>Eigenschaften</strong></br></br>
 <ul><li><strong>Farben: </strong>silber</li>
@@ -274,7 +274,7 @@
   <div>
     <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
     <h1>Yummynator</h1>
-    <div>Der Yummynator saugt sich durch die selbsthaftende Matte am Boden fest und kann somit weder umgesto&szligen noch verschoben werden, was wiederum bedeutet, dass kein Wasser oder Futter mehr am Boden verteilt ist. Sie k&oumlnnen sich Ihren pers&oumlnlichen Yummynator ganz leich aus den kombinierbaren Teilen selbst zusammenstellen. Das Yummynator Material l&aumlsst sich leicht reinigen und bietet keinen N&aumlhrboden f&uumlr Bakterien.
+    <div>Der Yummynator saugt sich durch die selbsthaftende Matte am Boden fest und kann somit weder umgesto&szligen noch verschoben werden, was wiederum bedeutet, dass kein Wasser oder Futter mehr am Boden verteilt ist. Sie k&oumlnnen sich Ihren pers&oumlnlichen Yummynator ganz leicht aus den kombinierbaren Teilen selbst zusammenstellen. Das Yummynator Material l&aumlsst sich leicht reinigen und bietet keinen N&aumlhrboden f&uumlr Bakterien.
 	</br></br>
 	<strong>Eigenschaften</strong></br></br>
 <ul><li><strong>Farben: </strong>blau, pink, grau</li>
