--- a/Sotickenwir.html
+++ b/Sotickenwir.html
@@ -47,7 +47,7 @@
 		<h1>So ticken wir!</h1>
 		<p>
 		Kimia ist ein innovatives junges Unternehmen, welches 2018 an der renommierten BHAK/BHAS Liezen gegr&uumlndet wurde. 
-		Zusammen versuchen wir, durch Praxis nahen Unterricht einen Einblick in die einzigartige Welt der Wirtschaft zu erlangen um dort unseren Kunden ein eizigartiges Erscheinungsbild zu liefern.</p></br></br>
+		Zusammen versuchen wir, durch Praxis nahen Unterricht einen Einblick in die einzigartige Welt der Wirtschaft zu erlangen um dort unseren Kunden ein einzigartiges Erscheinungsbild zu liefern.</p></br></br>
 
 		<center><h1>Neugierde er&oumlffnet M&oumlglichkeiten!</h1>
 		<p>Wir er&oumlffnen unseren Kunden v&oumlllig neue Denkweisen und bieten ihnen die M&oumlglichkeit diese auch umsetzen zu k&oumlnnen.</p></br></br>
@@ -62,7 +62,7 @@
 		<p>Jeder unserer Kunden erh&aumllt vollste Leistung eines ganzen Kreativ-Teams um beste Ergebnisse zu erzielen. Nur wenn ein Konzept auch wirklich als Perfekt angesehen wird sind wir zufrieden.</p></br></br>
 
 		<h1>Wir erg&aumlnzen uns!</h1>
-		<p>Wir sch&aumltzen und akzeptieren die St&aumlrken und Schw&aumlchen unserer Kunden und Kolegen und sch&oumlpfen Kraft daraus, um bestm&oumlgliche Ergebnisse liefern zu k&oumlnnen.</center></p></br></br>
+		<p>Wir sch&aumltzen und akzeptieren die St&aumlrken und Schw&aumlchen unserer Kunden und Kollegen und sch&oumlpfen Kraft daraus, um bestm&oumlgliche Ergebnisse liefern zu k&oumlnnen.</center></p></br></br>
 
     </div>
 	</div>
