--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
 	</br>F&uumlr einen Einblick in das Team, das hinter KIMIA steckt, klicken Sie <a href="UnserTeam.html">hier.</a></p></br></br></br></br>
 	<h1>Aktuelle Angebote</h1></br>
 	
-	<h2>Aktion 1 f&uumlr den Tag der offenen T&uumlr der BHAK/BHAS Liezen g&uumlltig von 23.11.2018 bis 24.11.2018</h2>
+	<h2> <!-- Überschrift des Angebotes --> </h2>
 	
-	<img src="" width="100%" height="100%"/></br></br>
-	<p>
-	</br></br><a href=""></a></p></br></br>
+	<img src="<!-- Link des Bildes -->" width="100%" height="100%"/></br></br>
+	<p> <!-- Beschreibung des Angebotes -->
+	</br></br><a href="<!-- Link für's Produkt im Produktkatalog -->"> <!-- hier --></a></p></br></br>
 	
 	
 	
