--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	
 	<h2> <!-- Überschrift des Angebotes --> </h2>
 	
-	<img src="<!-- Link des Bildes -->" width="100%" height="100%"/></br></br>
+	<img src="" width="100%" height="100%"/></br></br>
 	<p> <!-- Beschreibung des Angebotes -->
 	</br></br><a href="<!-- Link für's Produkt im Produktkatalog -->"> <!-- hier --></a></p></br></br>
 	
