--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
 	</br>F&uumlr einen Einblick in das Team, das hinter KIMIA steckt, klicken Sie <a href="UnserTeam.html">hier.</a></p></br></br></br></br>
 	<h1>Aktuelle Angebote</h1></br>
 	
-	<h2> <!-- Überschrift des Angebotes --> </h2>
+	<h2> Valtentinstagsaktion</h2>
 	
-	<img src="" width="100%" height="100%"/></br></br>
-	<p> <!-- Beschreibung des Angebotes -->
-	</br></br><a href="<!-- Link für's Produkt im Produktkatalog -->"> <!-- hier --></a></p></br></br>
+	<img src="Valentinstagsanktion.jpg" width="100%" height="100%"/></br></br>
+	<p>Auch für denValtentinstag haben wir ein besonderes Angebot für euch! Gültig bis 14. 02.2019!
+	</br></br><a href="#open-modal0"> hier</a></p></br></br>
 	
 	
 	
