--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 	</br>F&uumlr einen Einblick in das Team, das hinter KIMIA steckt, klicken Sie <a href="UnserTeam.html">hier.</a></p></br></br></br></br>
 	<h1>Aktuelle Angebote</h1></br>
 	
-	<h2> Valtentinstagsaktion</h2>
+	<h2> Auch f&uumlr den Valtentinstag haben wir ein besonderes Angebot für euch! G&uumlltig bis 14. 02.2019!</h2>
 	
-	<img src="Valentinstagsanktion.jpg" width="100%" height="100%"/></br></br>
-	<p>Auch für denValtentinstag haben wir ein besonderes Angebot für euch! Gültig bis 14. 02.2019!
+	<img src="images/Valentinstagsanktion.jpg" width="100%" height="100%"/></br></br>
+	<p>
 	</br></br><a href="#open-modal0"> hier</a></p></br></br>
 	
 	
