--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
 	</br>F&uumlr einen Einblick in das Team, das hinter KIMIA steckt, klicken Sie <a href="UnserTeam.html">hier.</a></p></br></br></br></br>
 	<h1>Aktuelle Angebote</h1></br>
 	
-	<h2> Auch f&uumlr den Valtentinstag haben wir ein besonderes Angebot für euch! G&uumlltig bis 14. 02.2019!</h2>
+	<h2> Auch f&uumlr den Valtentinstag haben wir ein besonderes Angebot für Sie! G&uumlltig bis 14. 02.2019!</h2>
 	
 	<img src="images/Valentinstagsanktion.jpg" width="100%" height="100%"/></br></br>
-	<p>
-	</br></br><a href="#open-modal0"> hier</a></p></br></br>
+	<p>Für mehr Informationen klicken Sie bitte 
+	</br></br><a href="Produktkatalog/#open-modal0"> hier</a></p></br></br>
 	
 	
 	
